[package]
name = "solana-kamino-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
solana-client = "2.0"
solana-sdk = "2.0"
solana-transaction-status = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
bincode = "1.3"
borsh = "0.10"
dotenv = "0.15"
